--- a/form.html
+++ b/form.html
@@ -18,10 +18,13 @@ Description : A simple HTML file for form tag.
     <form action="#" method="post">
         <fieldset>
             <legend>Personal Information</legend>
-            <!-- Add a label and input field for 'Name' here -->
+            <label for="name">Name:</label><br> <!-- Add a label and input field for 'Name' here -->
+            <input type="name" id="name" name="name"><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
             <!-- Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password"><br>
         </fieldset>
 
         <fieldset>
@@ -29,11 +32,25 @@ Description : A simple HTML file for form tag.
             <p>Gender:</p>
 			<input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label><br>
             <!-- Create radio buttons for 'Female', and 'Other' gender options -->
 	
             <label for="fruits">Choose a fruit:</label><br>
             <select id="fruits" name="fruits">
 				<option value="apple">Apple</option>
+                <option value="banana">Banana</option>
+                <option value="mango">Mango</option>
+                <option value="strawberry">Strawberry</option>
+                <option value="blueberry">Blueberry</option>
+                <option value="raspberry">Raspberry</option>
+                <option value="pear">Pear</option>
+                <option value="pineapple">Pineapple</option>
+                <option value="watermelon">Watermelon</option>
+                <option value="kiwi">Kiwi</option>
+                <option value="blackberry">Blackberry</option>
                 <!-- Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
             </select><br>
 			<!-- Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
