--- a/form.html
+++ b/form.html
@@ -39,7 +39,7 @@ Description : A simple HTML file for form tag.
             <!-- Create radio buttons for 'Female', and 'Other' gender options -->
 	
             <label for="fruits">Choose a fruit:</label><br>
-            <select id="fruits" name="fruits">
+            <select id="fruits" name="fruits" size="5">
 				<option value="apple">Apple</option>
                 <option value="banana">Banana</option>
                 <option value="mango">Mango</option>
@@ -58,12 +58,16 @@ Description : A simple HTML file for form tag.
 
         <fieldset>
             <legend>Other Elements</legend>
+            <label for="birthday">Birthday:</label><br>
+            <input type="date" id="birthday" name="birthday"><br>
             <!-- Add a label and input field for 'Birthday' here, use the appropriate type for date selection -->
             <label for="favcolor">Favorite Color:</label><br>
             <input type="color" id="favcolor" name="favcolor"><br>
+            <label for="quantity">Quantity (between 1 and 5):</label><br>
+            <input type="number" id="quantity" name="quantity" min="1" max="5"><br>
             <!-- Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
             <label for="range">Range (between 1 and 10):</label><br>
-            <input type="range" id="range" name="range" min="1" max="10"><br>
+            <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
 			<!-- Add an attribute to the range input to set its initial value to 2-->
             <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
             <label for="feedback">Feedback:</label><br>
