--- a/form.html
+++ b/form.html
@@ -70,11 +70,18 @@ Description : A simple HTML file for form tag.
             <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
 			<!-- Add an attribute to the range input to set its initial value to 2-->
             <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
+            <label for="homepage">Homepage:</label><br>
+            <input type="url" id="homepage" name="homepage"><br>
             <label for="feedback">Feedback:</label><br>
-			<textarea id="feedback" name="feedback"></textarea><br>
+			<textarea id="feedback" name="feedback" rows="10" cols="35"></textarea><br>
             <!-- Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
             <!-- Add a file input field -->
+            <label for="file"></label><br>
+            <input type="file" id="file" name="file"><br>
+
             <!-- Add a checkbox for 'Subscribe to newsletter' -->
+            <label for="checkbox"></label><br>
+            <input type="checkbox" id="checkbox" name="checkbox"> Subscribe to newsletter</input><br>
             <!-- Add a hidden field for 'customerId', set its value to '12345' -->
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
