--- a/styling.html
+++ b/styling.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 3 Exercise D
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Phoenix Bouma, Victor Gouttin
+Submission  : Jan 31, 2023
 Description : Learning CSS.
 =========================================================
 -->
@@ -13,24 +13,31 @@ Description : Learning CSS.
     <title>CSS Advanced Demonstrations</title>
     <style>
         #margin-demo {
+            margin: 30px;
+            border: 2px solid black;
             /*Modify #margin-demo to have a margin of 30px and a solid black border of 2px. Also, the borders must fit the content.*/
         }
 
         .padding-demo {
+            padding: 30px;
+            border: 2px dashed red;
             /*Adjust .padding-demo to include 30px padding and a dashed red border of 2px.*/
         }
 
         .container .nested-opacity {
+            opacity: 0.2;
             /*Change the opacity of .nested-opacity to 0.2!*/
         }
 
         
         .inline-demo {
+            display: inline-block;
             /*Change the display to see all elements of this type in a line.*/
             margin: 15px;
         }
 
         .block-demo {
+            text-align: center;
             /*Ensure .block-demo centers its text.*/
         }
 
@@ -44,22 +51,30 @@ Description : Learning CSS.
             /*
             Add CSS that I stick the first child to the left side of the screen.
             */
+            float: left;
             color: red;
             
         }
 
-        .block-demo > .inline-demo:nth-child(2) {            
+        .block-demo > .inline-demo:nth-child(2) {
+            float: center;            
             color: blue;
         }
 
-        /* Add your css for the thrid child here. */
+        .block-demo > .inline-demo:nth-child(3) {
+            float: right;            
+            color: green;
+        }
 
         .image-demo {
             /* Modify the .image-demo class to adjust the image's width to 50% of the screen. */
-            border: 2px solid blue;
+            border: 2px dashed green;
+            width: 50%;
         }
 
         .hover-demo:hover {
+            color: blue;
+            cursor: grabbing;
             /*Create a hover effect for .hover-demo that changes its color to blue and cursor to grabbing.*/
         }
     </style>
@@ -81,7 +96,7 @@ Description : Learning CSS.
     <div class="block-demo">
         <div class="inline-demo"><span>I am red.</span></div>
         <div class="inline-demo"><span>I am blue.</span></div>
-        <div class="inline-demo"><span>I am green.</span></div>
+        <div class="inline-demo"><span style="color: green;">I am green.</span></div>
     </div>    
 
     <h2>CSS Image Styling with Inline CSS</h2>
