--- a/form.html
+++ b/form.html
@@ -18,11 +18,12 @@ Description : A simple HTML file for form tag.
     <form action="#" method="post">
         <fieldset>
             <legend>Personal Information</legend>
-            <label for="name">Name:</label><br> <!-- Add a label and input field for 'Name' here -->
+            <label for="name">Name:</label><br>
             <input type="name" id="name" name="name"><br>
+
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
-            <!-- Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+
             <label for="password">Password:</label><br>
             <input type="password" id="password" name="password"><br>
         </fieldset>
@@ -32,14 +33,16 @@ Description : A simple HTML file for form tag.
             <p>Gender:</p>
 			<input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
+
             <input type="radio" id="female" name="gender" value="female">
             <label for="female">Female</label><br>
+
             <input type="radio" id="other" name="gender" value="other">
-            <label for="other">Other</label><br>
-            <!-- Create radio buttons for 'Female', and 'Other' gender options -->
-	
+            <label for="other">Other</label><br><br>
+
             <label for="fruits">Choose a fruit:</label><br>
             <select id="fruits" name="fruits" size="5">
+
 				<option value="apple">Apple</option>
                 <option value="banana">Banana</option>
                 <option value="mango">Mango</option>
@@ -51,38 +54,40 @@ Description : A simple HTML file for form tag.
                 <option value="watermelon">Watermelon</option>
                 <option value="kiwi">Kiwi</option>
                 <option value="blackberry">Blackberry</option>
-                <!-- Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
+                
             </select><br>
-			<!-- Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
+			
         </fieldset>
 
         <fieldset>
             <legend>Other Elements</legend>
             <label for="birthday">Birthday:</label><br>
             <input type="date" id="birthday" name="birthday"><br>
-            <!-- Add a label and input field for 'Birthday' here, use the appropriate type for date selection -->
+
             <label for="favcolor">Favorite Color:</label><br>
             <input type="color" id="favcolor" name="favcolor"><br>
+
             <label for="quantity">Quantity (between 1 and 5):</label><br>
             <input type="number" id="quantity" name="quantity" min="1" max="5"><br>
-            <!-- Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
+
             <label for="range">Range (between 1 and 10):</label><br>
             <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
-			<!-- Add an attribute to the range input to set its initial value to 2-->
-            <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
+
             <label for="homepage">Homepage:</label><br>
             <input type="url" id="homepage" name="homepage"><br>
+
             <label for="feedback">Feedback:</label><br>
 			<textarea id="feedback" name="feedback" rows="10" cols="35"></textarea><br>
-            <!-- Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
-            <!-- Add a file input field -->
-            <label for="file"></label><br>
+
+            <label for="file"></label>
             <input type="file" id="file" name="file"><br>
 
-            <!-- Add a checkbox for 'Subscribe to newsletter' -->
-            <label for="checkbox"></label><br>
-            <input type="checkbox" id="checkbox" name="checkbox"> Subscribe to newsletter</input><br>
-            <!-- Add a hidden field for 'customerId', set its value to '12345' -->
+            <label for="checkbox"></label>
+            <input type="checkbox" id="checkbox" name="checkbox"> Subscribe to newsletter</input>
+
+            <label for="customerId"></label><br>
+            <input type="hidden" id="customerId" name="customerId" value="12345"><br>
+
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
         </fieldset>
